--- a/app/views/rodauth/create_account.html.erb
+++ b/app/views/rodauth/create_account.html.erb
@@ -1,4 +1,11 @@
 <%= form_with url: rodauth.create_account_path, method: :post, data: { turbo: false } do |form| %>
+  <!-- new "name" field -->
+  <div class="form-group mb-3">
+    <%= form.label :name, "Name", class: "form-label" %>
+    <%= form.text_field :name, value: params[:name], required: true, class: "form-control #{"is-invalid" if rodauth.field_error("name")}", aria: ({ invalid: true, describedby: "login_error_message" } if rodauth.field_error("name")) %>
+    <%= content_tag(:span, rodauth.field_error("name"), class: "invalid-feedback", id: "login_error_message") if rodauth.field_error("name") %>
+  </div>
+  
   <div class="form-group mb-3">
     <%= form.label "login", rodauth.login_label, class: "form-label" %>
     <%= form.email_field rodauth.login_param, value: params[rodauth.login_param], id: "login", autocomplete: "email", required: true, class: "form-control #{"is-invalid" if rodauth.field_error(rodauth.login_param)}", aria: ({ invalid: true, describedby: "login_error_message" } if rodauth.field_error(rodauth.login_param)) %>
